--- a/SciCalc/SciCalc/SciCalc.csproj
+++ b/SciCalc/SciCalc/SciCalc.csproj
@@ -68,7 +68,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Views\" />
+	  <MauiXaml Update="Views\CalculatorPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
